<resources>
    <string name="app_name">Shop</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_username">Username</string>
    <string name="item_desc_image">Item Image</string>
    <string name="menu_list">List</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="item_description">Description</string>
    <string name="item_image_url">Image URL</string>
    <string name="text_add_item">Add Item</string>
    <string name="item_name">Name</string>
    <string name="delete_item">Delete Item</string>
    <string name="dialog_okbutton">OK</string>
    <string name="dialog_cancelbutton">Cancel</string>
    <string name="delete_item_title">Delete Item</string>
    <string name="delete_item_msg">continue to delete the current item?</string>
    <string name="camera">Photo</string>
    <string name="item_image_preview">Item Image Preview</string>
    <string name="logout">Logout</string>
</resources>
