<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/simple_list"
        android:title="@string/menu_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/simple_add"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:enabled="true"
        android:icon="@drawable/simple_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/simple_more"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
</menu>