<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/item_image_preview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/horizontal_left"
        app:layout_constraintRight_toLeftOf="@id/horizontal_right"
        android:src="@drawable/notfound"
        android:contentDescription="@string/item_image_preview" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_image_preview"
        app:layout_constraintLeft_toRightOf="@id/horizontal_left"
        app:layout_constraintRight_toLeftOf="@id/horizontal_right">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/item_name"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/image_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/horizontal_left"
        app:layout_constraintRight_toLeftOf="@id/horizontal_right"
        app:layout_constraintTop_toBottomOf="@+id/input_item_name">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_item_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="10">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_image_url"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/button_camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/camera"
            android:background="@drawable/camera"/>
    </LinearLayout>



    <EditText
        android:id="@+id/input_item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:maxLength="100"
        android:lines="3"
        android:scrollHorizontally="false"
        android:hint="@string/item_description"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/image_url"
        app:layout_constraintLeft_toRightOf="@id/horizontal_left"
        app:layout_constraintRight_toLeftOf="@id/horizontal_right" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_add_item"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/opaque_gray"
        custom:pb_colorPressed="@color/clear_grey"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="Loading"
        custom:pb_textError="Error"
        custom:pb_colorError="@color/red_error"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/input_item_description"
        app:layout_constraintLeft_toRightOf="@id/horizontal_left"
        app:layout_constraintRight_toLeftOf="@id/horizontal_right"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />
</android.support.constraint.ConstraintLayout>